Fix #1665 overlapping viewers in emulated fullscreen (iOS)

--- a/packages/core/src/styles/viewer.scss
+++ b/packages/core/src/styles/viewer.scss
@@ -32,4 +32,5 @@
     left: 0 !important;
     width: 100% !important;
     height: 100% !important;
+    z-index: 9999;
 }
